<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#DDD">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/lblDependency"
            android:id="@+id/btnDependency"
            android:drawableLeft="@drawable/ic_search"
            android:drawableStart="@drawable/ic_search"
            android:gravity="center"
            android:textSize="23dp"
            android:background="@drawable/button_white"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/lblServices"
            android:id="@+id/btnServices"
            android:drawableLeft="@drawable/ic_docs_s"
            android:drawableStart="@drawable/ic_docs_s"
            android:gravity="center"
            android:textSize="23dp"
            android:background="@drawable/button_white"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/lblOpinion"
            android:id="@+id/btnOpinion"
            android:drawableLeft="@drawable/ic_like"
            android:drawableStart="@drawable/ic_like"
            android:gravity="center"
            android:textSize="23dp"
            android:background="@drawable/button_white"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
