<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/tvOpinion"
            android:text="@string/lbl_rate_us_opinion"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="#000"
            android:paddingTop="10dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_gray"
                android:id="@+id/btnStar1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_gray"
                android:id="@+id/btnStar2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_gray"
                android:id="@+id/btnStar3"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_gray"
                android:id="@+id/btnStar4"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_gray"
                android:id="@+id/btnStar5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvRateStar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTitle"
            android:hint="@string/hint_title"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@drawable/button_rounded_white_released"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:id="@+id/etComments"
            android:hint="@string/hint_comments"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@drawable/button_rounded_white_released"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="end">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/ivTwt"
                android:layout_gravity="end"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_twitter_off"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/ivFB"
                android:layout_gravity="end"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_fb_off"/>
        </LinearLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSendR"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_blue"
            android:textColor="#fff"
            android:text="@string/btnSend"/>
    </LinearLayout>
</ScrollView>