<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:paddingBottom="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/llDescription"
            android:background="@android:color/transparent"
            android:layout_weight="1">
            <WebView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wvDesciption"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_read_more"
            android:layout_marginTop="10dp"
            android:id="@+id/btnShowMore"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/llPDocuments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/frame_rounded_gray"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:id="@+id/llDocuments"
                android:animateLayoutChanges="true">
                <TextView
                    android:id="@+id/tvDocumentsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblDocuments"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:drawableLeft="@drawable/ic_docs"/>
                <ExpandableListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="0dp"
                    android:divider="@android:color/transparent"
                    android:id="@+id/elvDocuments"
                    android:headerDividersEnabled="false"
                    android:layout_weight="1"
                    tools:listitem="@layout/listrow_group" />
            </LinearLayout>
            <ImageView
                android:id="@+id/btnShowMore2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_showmore"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/frame_rounded_gray"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblCost"
                android:textSize="10pt"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_cost"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblCostConcept"
                    android:gravity="center"
                    android:textColor="#AAA"
                    android:textSize="8pt"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblCostAmount"
                    android:gravity="center"
                    android:textColor="#AAA"
                    android:textSize="8pt"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llCost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lvCost"
                    tools:listitem="@layout/cell_cost"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
